# cross-reference-bookshops-and-gildad

./: .gitattributes  .gitignore  CLAUDE.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
.github/workflows/: daily-release.yml
origami/: __init__.py  bookshop.py  cache.py  catalog.py  config.py  crossref.py  deps.py  gilad.py  ingest.py  isbn.py  models.py  service.py  skill.py
scripts/: __init__.py  export_magazine_data.py  export_pdf.py  magazine.py  magazine.typ  magazine_html.py
scripts/templates/: magazine.html.j2
static/: style.css
templates/: base.html  book.html  browse.html  index.html  not_found.html  results.html
tests/: conftest.py  test_app.py  test_bookshop.py  test_cache.py  test_catalog.py  test_crossref.py  test_gilad.py  test_isbn.py  test_service.py  test_skill.py
tests/fixtures/: bookshop_9780804853101.html  bookshop_meili_origami.json  gilad_book_3232_pcoc2017.html  gilad_book_3795_origami_dragons.html  gilad_search_wyvern.html
