[project]
name = "origami-crossref"
version = "0.1.0"
description = "Browse origami books on Bookshop.org, filtered by skill level and cross-referenced with Gilad's Origami Database."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # bs4 emits this from inside lxml; not actionable for us.
    "ignore:The 'strip_cdata' option:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines in docstrings/data are fine
